[package]
name = "rust-nodejs-integration-lib-poc"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
napi = "2.16.6"
napi-derive = "2"
prost = "0.12.4"
tonic = "0.11"

[build-dependencies]
napi-build = "2.1.3"
tonic-build = "0.11"
